2003-04-04  Vladimir Makarov  <vmakarov@redhat.com>

	* config/ia64/ia64.c (issue_nops_and_insn): Add new parameter.
	Check that asm insn starts on a new cycle.  Add nops after asm
	insn to end bundle.
	(bundling): Move insn type evaluation from the loop.  Call
	issue_nops_and_insn with the new parameter.  Ignore changing
	position for nops after asm insn.

2003-03-28  Jakub Jelinek  <jakub@redhat.com>

	* config/rs6000/rs6000.c (rs6000_select_rtx_section): Add align
	argument.  Call mergeable_constant_section instead of const_section.
	(rs6000_select_section): Add align argument.  Put __thread vars
	into .tdata/.tbss.  Put constants into mergeable sections where
	appropriate.
	(rs6000_unique_section): Put __thread vars into .tdata/.tbss resp.
	.gnu.linkonce.td./.gnu.linkonce.tb.
	* config/rs6000/rs6000-protos.h (rs6000_select_section,
	rs6000_select_rtx_section): Add align argument.
	* config/rs6000/sysv4.h (SELECT_RTX_SECTION): Pass ALIGN down to
	rs6000_select_rtx_section.
	(SELECT_SECTION): Pass ALIGN down to rs6000_select_section.

2003-03-25  Janis Johnson  <janis187@us.ibm.com>
	    Alan Modra  <amodra@bigpond.net.au>
	    Jakub Jelinek  <jakub@redhat.com>

	* config/rs6000/linux64.h (ASM_OUTPUT_LABELREF): Handle TLS symbols.
	* config/rs6000/rs6000-protos.h (rs6000_tls_referenced_p,
	rs6000_tls_symbol_ref): New prototypes.
	* config/rs6000/rs6000.c (rs6000_tls_size, rs6000_tls_size_string):
	New.
	(TARGET_HAVE_TLS, TARGET_CANNOT_FORCE_CONST_MEM): Define.
	(rs6000_override_options): Call rs6000_parse_tls_size_option.
	(rs6000_parse_tls_size_option): New.
	(constant_pool_expr_1): Return 0 if tls_symbolic_operand_type.
	(rs6000_legitimize_address): Call legitimize_tls_address for TLS
	addresses.
	(rs6000_tls_get_addr, rs6000_got_sym, legitimize_tls_address,
	tls_symbolic_operand_type, rs6000_tls_symbol_ref,
	rs6000_tls_referenced_p, rs6000_tls_symbol_ref_1): New functions.
	(rs6000_legitimate_address): Return 0 if tls_symbolic_operand_type.