@@ -1,3 +1,8 @@
+2003-04-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/ia64/unwind-ia64.c (uw_update_reg_address): Handle
+	.save XX, r0.
+
 2003-04-04  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* config/ia64/ia64.c (issue_nops_and_insn): Add new parameter.
